<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/alert_box"
    android:padding="20dp"
    android:layout_gravity="center"
    android:layout_margin="80dp"
    android:layout_height="wrap_content"
    android:layout_width="320dp">

    <TextView
        android:id="@+id/textView1"
        style="@style/RegText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:includeFontPadding="false"
        android:padding="4dp"
        android:text="@string/are_you_sure_you_want_to_reset_all_values"
        android:textAlignment="textStart"
        android:textColor="@color/almost_black"
        android:textSize="16dp" />


    <RelativeLayout
        android:layout_gravity="end"
        android:layout_height="35dp"
        android:layout_width="200dp">

        <ImageButton
            android:id="@+id/noButton"
            android:layout_gravity="start"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="#00FFFFFF"
            android:padding="2dp" />

        <ImageButton
            android:id="@+id/yesButton"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_toEndOf="@+id/noButton"
            android:background="#00FFFFFF"
            android:padding="2dp" />

        <TextView
            style="@style/RegText"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_gravity="start"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/no"
            android:textColor="@color/red"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            style="@style/RegText"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_toEndOf="@+id/noButton"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/yes"
            android:textColor="#00f"
            android:textSize="16dp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>