<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/alert_box"
    android:padding="16dp"
    android:layout_gravity="center"
    android:layout_margin="50dp"
    android:layout_height="wrap_content"
    android:layout_width="340dp">

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:id="@+id/textView1"
            style="@style/RegText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/imageView1"
            android:includeFontPadding="false"
            android:padding="4dp"
            android:text="@string/gps_off"
            android:textAlignment="textStart"
            android:textColor="@color/almost_black"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_gravity="end"
        android:layout_height="35dp"
        android:layout_width="200dp">

        <ImageButton
            android:id="@+id/noButton"
            android:layout_gravity="start"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="#00FFFFFF"
            android:padding="2dp" />

        <ImageButton
            android:id="@+id/yesButton"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_toEndOf="@+id/noButton"
            android:background="#00FFFFFF"
            android:padding="2dp" />

        <TextView
            style="@style/RegText"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_gravity="start"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/no"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            style="@style/RegText"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_toEndOf="@+id/noButton"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/yes"
            android:textColor="#00f"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>